# TrussC

./: .git_archival.txt  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  ROADMAP.md
.github/workflows/: build.yml  full-sweep.yml
addons/tcxBox2d/: CMakeLists.txt  addon.json
addons/tcxBox2d/example-basic/src/: tcApp.cpp
addons/tcxBox2d/example-collision/: .gitignore  CMakeLists.txt
addons/tcxBox2d/example-collision/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxBox2d/example-node/: CMakeLists.txt
addons/tcxBox2d/example-node/src/: tcApp.cpp
addons/tcxBox2d/examples/box2dBasicExample/: CMakeLists.txt
addons/tcxBox2d/examples/box2dBasicExample/src/: tcApp.cpp
addons/tcxBox2d/examples/box2dNodeExample/: CMakeLists.txt
addons/tcxBox2d/examples/box2dNodeExample/src/: tcApp.cpp
addons/tcxBox2d/src/: tcxBox2d.h  tcxBox2dBody.h  tcxBox2dCircle.cpp  tcxBox2dPolygon.cpp  tcxBox2dRect.cpp  tcxBox2dWorld.cpp  tcxBox2dWorld.h  tcxCollider2D.cpp  tcxCollider2D.h  tcxCollisionEvent.h  tcxCollisionManager.cpp  tcxCollisionManager.h
addons/tcxCurl/: CMakeLists.txt  addon.json
addons/tcxCurl/src/: tcxCurl.h  tcxCurl_android.cpp
addons/tcxDepthCamera/: README.md
addons/tcxDepthCamera/src/: tcxDepthCamera.h  tcxDepthCameraBase.h  tcxDepthTypes.h  tcxSyntheticDepthCamera.h
addons/tcxDepthRecord/: README.md
addons/tcxDepthRecord/src/: tcDepthPlayback.h  tcDepthRecordFormat.h  tcDepthRecorder.h  tcxDepthPlayback.h  tcxDepthRecord.h  tcxDepthRecorder.h
addons/tcxGltf/example-gltf/: CMakeLists.txt
addons/tcxGltf/src/: tcxGltf.cpp  tcxGltf.h
addons/tcxHap/: CMakeLists.txt  addon.json
addons/tcxHap/example-hap/: CMakeLists.txt  addons.make
addons/tcxHap/src/: tcxHapDecoder.h  tcxHapPlayer.h  tcxMovParser.h
addons/tcxImGui/: README.md  addon.json
addons/tcxImGui/src/: sokol_imgui.h  tcImGuiHooks.h  tcImGuiTools.h  tcxImGui.h
addons/tcxLua/: CMakeLists.txt
addons/tcxLua/bindcheck/: .gitignore  README.md  regen_expected.sh  run_bindcheck.sh  sweep_examples.sh
addons/tcxLua/src/: tcxLua.cpp  tcxLua.h  tcxLuaLint.cpp  tcxLuaLint.h  tcxLuaPathAdapter.h
addons/tcxLua/tools/: implicit-conv-audit.js
addons/tcxLut/: CMakeLists.txt  addon.json
addons/tcxLut/example-lut/: CMakeLists.txt  addons.make
addons/tcxLut/example-lut/src/: tcApp.cpp  tcApp.h
addons/tcxLut/src/: tcLut.h
addons/tcxMidi/: README.md
addons/tcxMidi/src/: tcxMidiIn.h  tcxMidiOut.h
addons/tcxNodeInspector/: README.md
addons/tcxNodeInspector/src/: tcxNodeInspector.h
addons/tcxObj/src/: tcxObjExporter.cpp  tcxObjExporter.h  tcxObjLoader.cpp  tcxObjLoader.h  tiny_obj_loader.h
addons/tcxOsc/: addon.json
addons/tcxOsc/example-osc-event/: CMakeLists.txt
addons/tcxOsc/example-osc-polling/: CMakeLists.txt
addons/tcxOsc/src/: tcxOscReceiver.h  tcxOscSender.h
addons/tcxOsc/tests/: README.md
addons/tcxQuadWarp/: addon.json
addons/tcxQuadWarp/example-quadWarp/: CMakeLists.txt
addons/tcxQuadWarp/src/: tcxQuadWarp.cpp
addons/tcxTcv/: CMakeLists.txt  README.md  ROADMAP.md
addons/tcxTcv/TrussC_Video_Codec_Encoder/: addons.make
addons/tcxTcv/TrussC_Video_Codec_Encoder/src/: EncodingSession.cpp  EncodingSession.h  tcApp.cpp  tcApp.h
addons/tcxTcv/example-tcvEncoder/src/: EncodingSession.cpp  EncodingSession.h  main.cpp  tcApp.cpp  tcApp.h
addons/tcxTcv/example-tcvPlayer/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxTcv/src/: tcTcvEncoder.h  tcTcvPlayer.h  tcxTcv.h
addons/tcxTls/: CMakeLists.txt  addon.json
addons/tcxTls/cmake/: tcTlsCaBundle.cpp.in
addons/tcxTls/example-tls/: CMakeLists.txt
addons/tcxTls/src/: tcTlsClient.cpp  tcTlsClient.h
addons/tcxWebSocket/: CMakeLists.txt  addon.json
addons/tcxWebSocket/example-webSocket/: CMakeLists.txt
addons/tcxWebSocket/example-webSocket/src/: tcApp.cpp
addons/tcxWebSocket/src/: tcWebSocketClient.cpp  tcWebSocketClient.h
cmake/: use_addon.cmake
core/: CMakeLists.txt
core/cmake/: trussc_app.cmake  use_addon.cmake
core/include/: TrussC.h  tcBaseApp.h  tcMath.h  tcNode.h  tcPlatform.h
core/include/impl/: stb_impl.cpp
core/shaders/: iblBake.glsl  meshPbr.glsl  pointCloud.glsl  shadowDepth.glsl
core/tests/: README.md
docs/: .gitignore  ADDONS.md  AI_AUTOMATION.md  API_QUICK_REFERENCE.md  ARCHITECTURE.md  AUDIO_VERIFICATION_CHECKLIST.md  BUILD_SYSTEM.md  FOR_AI_ASSISTANT.md  GEM_TrussC_Assistant.md  GET_STARTED.md  GET_STARTED_CONSOLE_MODE.md  GET_STARTED_jp.md  PHILOSOPHY.md  REFERENCE.md  REFERENCE_REDESIGN.md  ROADMAP.md  TrussC_vs_openFrameworks.md  api-definition.yaml
docs/dev/: multi-window-win-audit.md  sapp-android-impl-spec.md  sapp-inventory.md  sapp-ios-impl-spec.md  sapp-mac-impl-spec.md  sapp-web-impl-spec.md  sapp-win32-impl-spec.md  sapp-x11-impl-spec.md  sokol_app_tc-design.md
docs/reference/: API_INDEX.md  README.md  api-reference.toml  generate.js  structure.js
docs/scripts/: emit-sketch-api.js  emit-sketch-reference.js  emit-web.js  gen-colors.js  generate-docs.js  generateDocsForAI.sh  of-category-mapping.js  validate-bindings.js
docs/tests/: README.md  coverage-audit.js  coverage-residual.md  coverage-wishlist.md  signature-probe.js
examples/: build_all.py  build_all.sh
examples/00_base/: CMakeLists.txt
examples/01_shapes/: CMakeLists.txt  Info.plist.in
examples/02_nodes/: CMakeLists.txt
examples/02_nodes/src/: tcApp.h  (+2 more)
examples/05_3d_primitives/: CMakeLists.txt
include/: TrussC.h  tcBaseApp.h  tcNode.h
modules/tcSound/: CMakeLists.txt
modules/tcSound/include/tc/sound/: tcSound.h
projectGenerator/: buildProjectGenerator_linux.sh
repro/: README.md
src/: sokol_impl.mm  stb_impl.cpp  tcFbo_mac.mm  tcVideoGrabber_mac.mm
tools/: CMakeLists.txt  buildProjectGenerator_linux.sh  build_linux.sh  build_mac.command  build_win.bat
tools/projectGenerator/: CMakeLists.txt
tools/src/: ProjectGenerator.cpp  main.cpp  tcApp.cpp
trussc/: CMakeLists.txt
trussc/cmake/: trussc_app.cmake
trussc/include/: TrussC.h  tcBaseApp.h  tcMath.h  tcNode.h
trussc/resources/: Info.plist.in  default.icns
trussc/shaders/: iblBake.glsl  meshPbr.glsl
(+550 files in other folders)
